@@ -649,6 +649,7 @@ They say that the lazy warrior jumped over the doors.
 They say that carrying dozens of Mana pots without immunities is mere suicide.
 They say that carrying dozens of Heal pots without immunities is not so bad.
 They say that it's comedie when a troll decides to be a wizard.
+Started to learn a new skill? Time to revise your macros!
 They say that 
 They say that 
 They say that 
